# ppmap-proto-pollution

./: .gitignore  .pre-commit-config.yaml  AUDIT_COMPLETION_REPORT.md  CHANGELOG.md  CI_CD_SECURITY_SETUP.md  CONTRIBUTING.md  DEPENDENCY_AUDIT_REPORT.md  Dockerfile  FEATURES.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LIMITATIONS.md  MANUAL_GUIDE.md  MANUAL_TESTING_GUIDE.md  MANUAL_TESTING_VIDEO_GUIDE.md  PHASE_8_JQUERY_DETECTION.md  QUICKSTART.md  QUICK_REFERENCE.md  READING_GUIDE.txt  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  START_HERE_MANUAL_TESTING.txt  TOOLS_AUDIT_REPORT.md  TOOLS_TESTING_REPORT.md  config.example.yaml  docker-compose.yml  extract_colors.py  fix_imports.py  help_output.txt  package.json  ppmap.py  pyproject.toml  refrensi.md  requirements-dev.txt  requirements-extra.txt  requirements.txt  scan_log.txt  test_jquery_detection.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security-scan.yml
docker/: Dockerfile.quickpoc  README.md
docs/: index.html  sitemap.xml
docs/css/: animations.css  style.css
docs/demo/: index.html
docs/guides/: DOCUMENTATION.md  EXPLOITATION_GUIDE.md  FEATURES.md  MANUAL_TESTING_CHEATSHEET.md  MANUAL_TESTING_GUIDE.md  QUICKSTART.md  ROADMAP.md  ROADMAP_2026.md  chaining.md
docs/js/: demo.js  main.js
docs/manual/: installation.html  payloads.html  (+1 more)
ppmap/: __init__.py  browser.py  config.py  engine.py  fp_engine.py  graphql.py  log_setup.py  logging.py  mobile.py  models.py  oob.py  payloads.py  performance.py  reports.py  sast.py  scanner.py  utils.py  websocket.py
ppmap_lab/: Dockerfile  README.md  TESTING_GUIDE.md  package-lock.json  package.json  server.js
scripts/: security_scan.py
tests/: conftest.py  test_browser.py  test_components.py  test_config.py  test_exploitation_verification.py  test_flags.py  test_fp_engine.py  test_graphql.py  test_mobile.py  test_performance.py  test_reports.py  test_sast.py  test_scanner.py  test_security_fixes.py
tools/: analyze_reports.py  analyze_scan_results.py  find_library_issues.py  generate_full_report.py  manual_testing_interactive.py  organize_reports.py  quickpoc_local.py  tool_template.py
utils/: __init__.py  auth.py  browser.py  burp_parser.py  fingerprint.py  gadgets.py  payloads.py
(+58 files in other folders)
