[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppmap-proto"
version = "4.1.0"
authors = [
  { name="Aar Saputra", email="aarsaputra@example.com" },
]
description = "Advanced Prototype Pollution Multi-Purpose Assessment Platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
]

[project.urls]
"Homepage" = "https://github.com/aarsaputra/ppmap-proto-pollution"
"Bug Tracker" = "https://github.com/aarsaputra/ppmap-proto-pollution/issues"

[project.scripts]
ppmap = "ppmap.main:main"
