[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppmap-proto"
version = "4.1.0"
authors = [
  { name="Aar Saputra", email="aarsaputra@example.com" },
]
description = "Advanced Prototype Pollution Multi-Purpose Assessment Platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "webdriver-manager>=4.0.0",
    "lxml>=4.9.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "python-json-logger>=2.0.7",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.12.0", "ruff>=0.12.0", "bandit>=1.7.0"]
extra = ["reportlab>=4.0.0", "python-docx>=0.8.11", "jupyter>=1.0.0"]

[project.urls]
"Homepage" = "https://github.com/aarsaputra/ppmap-proto-pollution"
"Bug Tracker" = "https://github.com/aarsaputra/ppmap-proto-pollution/issues"

[project.scripts]
ppmap = "ppmap.main:main"
